<resources>
    <string name="app_name" translatable="false">Project Finance</string>
    <string name="admob__banner_id" translatable="false">ca-app-pub-here</string>
    <string name="admob__native_id" translatable="false">ca-app-pub-here</string>
    <string name="web_client_id" translatable="false">web-client-id-here</string>
    <string name="general__close_desc">Close dialog</string>
    <string name="general__back_desc">Go back</string>
    <string name="general__revert">Revert</string>
    <string name="general__help_desc">Help</string>
    <string name="general__retry">Retry</string>
    <string name="general__error">Error</string>
    <string name="general__cancel">Cancel</string>
    <string name="general__accept">Accept</string>
    <string name="general__worker_channel_name">Worker\'s notification</string>
    <string name="general__worker_channel_description">Notifications for foreground services</string>
    <string name="general__server_error">There\'s been an error while communicating with server. Try again.</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Summary</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_filter">Filter</string>
    <string name="title_profile">Profile</string>
    <string name="title_config">Config</string>
    <string name="splash__screen_name" translatable="false">Splash</string>
    <string name="splash__version" translatable="false">V. %1$s</string>
    <string name="home__total_saved_up">Saved up</string>
    <string name="home__total_deposit">Income</string>
    <string name="home__total_expensed">Expenses</string>
    <string name="home__summary">Summary</string>
    <string name="home__last_movements">Last movements</string>
    <string name="home__show_more">Show more</string>
    <string name="home__no_movements">There are no movements yet…</string>
    <string name="home__expense_category_pie_chart">Top of expenses</string>
    <string name="home__deposit_category_pie_chart">Top of deposits</string>
    <string name="home__historical_savings">Savings historical</string>
    <string name="popup_home__title">There\'s more content when scrolling!</string>
    <string name="add_new_invoice">Add new invoice</string>
    <string name="add_new_expense">Add new expense</string>
    <string name="add_new_deposit">Add new deposit</string>
    <string name="edit_expense">Edit expense</string>
    <string name="edit_deposit">Edit deposit</string>
    <string name="add_invoice__invoice_title">Title*</string>
    <string name="add_invoice__invoice_description">Description</string>
    <string name="add_invoice__date">Date*</string>
    <string name="add_invoice__invoice_amount">Invoice amount*</string>
    <string name="add_invoice__title_empty_error">Title cannot be empty</string>
    <string name="add_invoice__amount_equal_zero_error">Invoice amount cannot be equal to zero</string>
    <string name="add_invoice__amount_too_many_characters_error">Invoice amount cannot be that high</string>
    <string name="add_invoice__date_empty_error">Date cannot be empty</string>
    <string name="add_invoice__edit_invoice_title">Edit invoice</string>
    <string name="add_invoice__category">Category</string>
    <string name="add_invoice__accept">Add invoice</string>
    <string name="add_invoice__type">Invoice type*</string>
    <string name="add_invoice__expense">Expense</string>
    <string name="add_invoice__deposit">Deposit</string>
    <string name="add_invoice__sync">Cloud synchronization*</string>
    <string name="add_invoice__sync_on">Synchronize</string>
    <string name="add_invoice__sync_off">Don\'t synchronize</string>
    <string name="detail__more_desc">Show options</string>
    <string name="detail__invoice_title">Title</string>
    <string name="detail__invoice_description_title">Description</string>
    <string name="detail__invoice_date_title">Date</string>
    <string name="detail__main_title">Invoice detail</string>
    <string name="detail__invoice_category_title">Category</string>
    <string name="detail__sync_title">Synchronization state</string>
    <string name="detail__sync_on">Synchronized</string>
    <string name="detail__sync_off">Not synchronized</string>
    <string name="detail__sync_never">Never synchronize</string>
    <string name="row_dashboard__no_content">There aren\'t any invoices in here… :(</string>
    <string name="dashboard__all_invoices_tab">All</string>
    <string name="dashboard__deposits_tab">Deposits</string>
    <string name="dashboard__expenses_tab">Expenses</string>
    <string name="dashboard__add_invoice_desc">Add invoice</string>
    <string name="dashboard__screen_name">This month\'s Summary</string>
    <string name="dashboard__filter">Filter</string>
    <string name="dashboard_tutorial__accept">Accept</string>
    <string name="dashboard_tutorial__next">Next</string>
    <string name="dashboard_tutorial__title">Summary tutorial</string>
    <string name="dashboard_tutorial__tutorial">Now you can edit and delete invoices by swiping on it! Just swipe left to edit it or swipe right to delete it. It\'s that simple!</string>
    <string name="dashboard_tutorial__reaction_tutorial">Now you can add reactions by long pressing it! Just long press and select whichever reaction. You can add up to 8 reactions. It\'s that simple!</string>
    <string name="dashboard__sync_now">Sync now</string>
    <string name="dashboard__synchronizing">Synchronizing invoices</string>
    <string name="row_ad__loading_ad">Loading ad</string>
    <string name="detail_options__main_title">Detail options</string>
    <string name="detail_options__edit_invoice">Edit invoice</string>
    <string name="detail_options__add_reaction">Add reaction</string>
    <string name="detail_options__remove_invoice">Remove invoice</string>
    <string name="info__invoice_removed">Invoice removed successfully</string>
    <string name="add_category__title">Add category</string>
    <string name="add_category__accept">Add category</string>
    <string name="add_category__category_deleted">Category deleted</string>
    <string name="create_category__color">Color*</string>
    <string name="create_category__category_name">Name*</string>
    <string name="create_category__title">Create category</string>
    <string name="create_category__edit_category">Edit category</string>
    <string name="create_category__accept_edit_category">Edit category</string>
    <string name="create_category__accept">Create category</string>
    <string name="category__none">No category</string>
    <string name="color_picker__title">Pick a color</string>
    <string name="color_picker__accept">Add color</string>
    <string name="floating_button__add_deposit">Add deposit</string>
    <string name="floating_button__add_expense">Add expense</string>
    <string name="edit_invoice_type__accept">Edit invoice type</string>
    <string name="edit_invoice_type__main_title">Edit invoice type</string>
    <string name="edit_invoice_type__deposit">Deposit</string>
    <string name="edit_invoice_type__expense">Expense</string>
    <string name="select_filter__main_title">Filters</string>
    <string name="select_filter__date">Date</string>
    <string name="select_filter__category">Category</string>
    <string name="select_filter__accept">Filter</string>
    <string name="select_filter__delete_desc">Delete filter</string>
    <string name="filter_date__accept">Select dates</string>
    <string name="filter_date__to">To</string>
    <string name="filter_date__from">From*</string>
    <string name="filter_date__title">Filter by date</string>
    <string name="filter_category__title">Filter by categories</string>
    <string name="filter_category__accept">Select categories</string>
    <string name="filter__date_from_to">Invoices from %1$s to %2$s</string>
    <string name="filter__date_from">Invoices on %1$s</string>
    <string name="filter__categories_selected">Categories selected: %1$s</string>
    <string name="filter__total_deposit">Income</string>
    <string name="filter__total_expensed">Expenses</string>
    <string name="row_filter__no_content">It\'s a little bit quiet in here…</string>
    <string name="login__sign_in">Sign in</string>
    <string name="login__sign_up">Sign up</string>
    <string name="login__email">Email</string>
    <string name="login__password">Password</string>
    <string name="login__show_pass_desc">Show password</string>
    <string name="login__title_sign_in">Sign in to Project Finance.</string>
    <string name="login__title_sign_up">Hello There! Welcome to Project Finance.</string>
    <string name="login__sign_in_with_google">Sign in with Google</string>
    <string name="login__or">Or</string>
    <string name="login__forgot_pass">Forgot your password?</string>
    <string name="login__account_sign_up">Don\'t have an account? Sign up</string>
    <string name="login__username">Username</string>
    <string name="login__continue_without_login">Continue without login</string>
    <string name="login__error_with_google">There\'s been an error trying to login with Google</string>
    <string name="login__username_or_email">Email or Username</string>
    <string name="notifications__notifications_title">Notifications!</string>
    <string name="notifications__notifications_description">Project Finance will notify you when new notifications come in, such as when we are synchronizing your invoices!</string>
    <string name="notifications__notify_me">Notify me!</string>
    <string name="notifications__skip">Skip</string>
    <string name="login_help__main_title">Help</string>
    <string name="login_help__why">Why is needed?</string>
    <string name="login_help__data">What data is recollected?</string>
    <string name="login_help__how">How do I sign up?</string>
    <string name="login_help__why_desc">Authentication is required to unlock online content, such as cloud synchronization.</string>
    <string name="login_help__without_auth_desc">Without authentication, you will be able to use the basic functionality of the app, but your data will not be backed up on the cloud, so it may be lost if the application is uninstalled or if you switch phones.</string>
    <string name="login_help__data_desc">We only will ask for basic information, such as username, email and password. This information is stored on our server and will be use ONLY to identify you. This information will not be sold or use for other purpose.</string>
    <string name="login_help__how_desc">In order to sign up, you\'ve got two options: via Google auth or signing in manually.</string>
    <string name="login_help__how_google">Click on Sign in with Google and then click on the account you want to use for Project Finance. No more actions are required.</string>
    <string name="login_help__how_manual">Click on the bottom text where it prompts you to sign in, write down a username, an email and a password and click on Sign In. Next, you need to verify your email by clicking on the link you will receive on your mail. After that, no more actions are required.</string>
    <string name="login_help__terms">By using the app, you accept the Terms and Conditions of Project Finance.</string>
    <string name="login_help__how_google_title">Via Google</string>
    <string name="login_help__how_manual_title">Sign in manually</string>
    <string name="verification__title">Verify your email</string>
    <string name="verification__desc">Verification is needed to be able to synchronize your invoices and to change your information. Also, you will get a badge when you verify your email successfully. You can verify your email by clicking on the link you\'ve received on the email we have just sent to your mail.</string>
    <string name="verification__not_received">Haven\'t received it? Check your spam folder</string>
    <string name="verification__resend">Resend verification mail</string>
</resources>