<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DialogStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/login_help__label__main_title"
        style="@style/Text.Bold.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/login_help__main_title"
        app:layout_constraintEnd_toStartOf="@id/login_help__btn__close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_help__btn__close"
        style="@style/Drawable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/general__close_desc"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fadingEdge="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:fadeScrollbars="false"
        android:fadingEdgeLength="16dp"
        android:orientation="vertical"
        android:requiresFadingEdge="vertical"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_help__label__main_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_help__label__main_title">

            <TextView
                android:id="@+id/login_help__about_tile"
                style="@style/Text.Bold.Body1.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/login_help__why"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/login_help__why_description"
                style="@style/Text.Regular.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/login_help__why_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_help__about_tile"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/login_help__without_auth_description"
                style="@style/Text.Regular.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/login_help__without_auth_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_help__about_tile"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/login_help__data_tile"
                style="@style/Text.Bold.Body1.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/login_help__data"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/login_help__label__data_description"
                style="@style/Text.Regular.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/login_help__data_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_help__about_tile"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/login_help__how_tile"
                style="@style/Text.Bold.Body1.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/login_help__how"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/login_help__label__how_description"
                style="@style/Text.Regular.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/login_help__how_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_help__about_tile"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/login_help__how_google_tile"
                style="@style/Text.Bold.Body2.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/login_help__how_google_title"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/login_help__label__how_google_description"
                style="@style/Text.Regular.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/login_help__how_google"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_help__about_tile"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/login_help__how_manual_tile"
                style="@style/Text.Bold.Body2.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/login_help__how_manual_title"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/login_help__label__how_manual_description"
                style="@style/Text.Regular.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/login_help__how_manual"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_help__about_tile"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/login_help__terms"
                style="@style/Text.Bold.Body2.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLength="200"
                android:text="@string/login_help__terms"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_help__without_auth_description"
                tools:visibility="visible" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
